# ProjektBazyDanych

./: .gitignore  README.md  bazy_Danych_tabele.txt  bazy_danych_crud.txt  dane.sql  dokumentacja.md  setup.sql  zapytania.txt  zmiany2.txt
src/: app.py  db.py  pyproject.toml  setup_mongo.js
